# disml

./: .gitignore  .gitlab-ci.yml  :merlin-log:  LICENSE  README.md  disml.install  disml.opam  doc  dune  dune-project  generate_json.sh
doc/disml/Disml/: index.html
doc/disml/Disml/Activity/: index.html
doc/disml/Disml/Attachment/: index.html
doc/disml/Disml/Ban/: index.html
doc/disml/Disml/Ban_t/: index.html
doc/disml/Disml/Channel/: index.html
doc/disml/Disml/Embed/: index.html
doc/disml/Disml/Guild/: index.html
doc/disml/Disml/Member/: index.html
doc/disml/Disml/Member_t/: index.html
doc/disml/Disml/Message/: index.html
doc/disml/Disml/Message_t/: index.html
doc/disml/Disml/Presence/: index.html
doc/disml/Disml/Reaction/: index.html
doc/disml/Disml/Reaction_t/: index.html
doc/disml/Disml/Sharder/: index.html
doc/disml/Disml/Snowflake/: index.html
doc/disml/Disml/User/: index.html
doc/disml/Disml/User_t/: index.html
doc/disml/Disml__Activity/: index.html
doc/disml/Disml__Attachment/: index.html
doc/disml/Disml__Channel/: index.html
doc/disml/Disml__Config/: index.html
doc/disml/Disml__Embed/: index.html
doc/disml/Disml__Message_t/: index.html
doc/disml/Disml__Opcode/: index.html
doc/disml/Disml__Presence/: index.html
doc/disml/Disml__Reaction/: index.html
doc/disml/Disml__Role/: index.html
doc/disml/Disml__Role_t/: index.html
doc/disml/Disml__Sharder/Shard/: index.html
doc/disml/Disml__User_t/: index.html
docs/: index.html
docs/disml/: index.html
docs/disml/Disml/: index.html
docs/disml/Disml/Activity/: index.html
docs/disml/Disml/Attachment/: index.html
docs/disml/Disml/Ban/: index.html
docs/disml/Disml/Ban_t/: index.html
docs/disml/Disml/Channel/: index.html
docs/disml/Disml/Channel_t/: index.html
docs/disml/Disml/Client/: index.html
docs/disml/Disml/Client_options/: index.html
docs/disml/Disml/Config/: index.html
docs/disml/Disml/Dispatch/: index.html
docs/disml/Disml/Embed/: index.html
docs/disml/Disml/Emoji/: index.html
docs/disml/Disml/Endpoints/: index.html
docs/disml/Disml/Event/: index.html
docs/disml/Disml__/: index.html
docs/disml/Disml__Activity/: index.html
docs/disml/Disml__Attachment/: index.html
docs/disml/Disml__Ban/: index.html
docs/disml/Disml__Ban_t/: index.html
docs/disml/Disml__Channel/: index.html
docs/disml/Disml__Channel_id/: index.html
docs/disml/Disml__Channel_id_t/: index.html
docs/disml/Disml__Channel_t/: index.html
docs/disml/Disml__Client/: index.html
docs/disml/Disml__Client_options/: index.html
docs/disml/Disml__Dispatch/: index.html
docs/disml/Disml__Embed/: index.html
docs/disml/Disml__Emoji/: index.html
docs/disml/Disml__Endpoints/: index.html
docs/disml/Disml__Event/: index.html
docs/disml/Disml__Event_models/: index.html
docs/disml/Disml__Guild/: index.html
docs/disml/Disml__Guild_id/: index.html
docs/disml/Disml__Guild_id_t/: index.html
docs/disml/Disml__Guild_t/: index.html
docs/disml/Disml__Http/: index.html
docs/disml/Disml__Impl/: index.html
docs/disml/Disml__Member/: index.html
docs/disml/Disml__Member_t/: index.html
docs/disml/Disml__Message/: index.html
docs/disml/Disml__Message_id/: index.html
docs/disml/Disml__Message_t/: index.html
docs/disml/Disml__Opcode/: index.html
docs/disml/Disml__Presence/: index.html
docs/disml/Disml__Reaction/: index.html
docs/disml/Disml__Reaction_t/: index.html
docs/disml/Disml__Rl/: index.html
docs/disml/Disml__Role/: index.html
docs/disml/Disml__Role_id/: index.html
docs/disml/Disml__Role_t/: index.html
docs/disml/Disml__S/: index.html
docs/disml/Disml__Sharder/: index.html
docs/disml/Disml__Snowflake/: index.html
docs/disml/Disml__User/: index.html
docs/disml/Disml__User_id/: index.html
docs/disml/Disml__User_id_t/: index.html
docs/disml/Disml__User_t/: index.html
lib/: .gitlab-ci.yml  _sharder.mli  animus.ml  ban.atd  cache.ml  cache.mli  channel.atd  channel.ml  client.ml  client.mli  client_options.ml  client_options.mli  config.ml  config.mli  disml.ml  dispatch.ml  dispatch.mli  dune  endpoints.ml  endpoints.mli  event.ml  event.mli  guild.atd  http.ml  http.mli  impl.ml  member.atd  message.atd  message.ml  model.ml  models.ml  models.mli  opcode.ml  opcode.mli  rl.ml  rl.mli  role.atd  s.ml  sharder.ml  sharder.mli  (+1 more)
lib/client/: client.ml  shardManager.ml  sharder.ml  sharder.mli
lib/client/sharder/: conn.ml  opcode.ml  shard.ml  shardManager.ml  shard_manager.ml
lib/gateway/: dispatch.ml  dispatch.mli  event.ml  event.mli  opcode.ml  opcode.mli  sharder.ml  sharder.mli
lib/http/: endpoints.ml  endpoints.mli  http.ml  http.mli  rl.ml  rl.mli
lib/model/: emoji.ml  guild.ml  user.ml
lib/models/: activity.atd  activity.ml  activity.mli  activity_j.ml  activity_j.mli  activity_t.ml  attachment.ml  ban.ml  ban.mli  ban_t.ml  channel.atd  channel.ml  channel.mli  channel_t.ml  embed.atd  embed.ml  embed.mli  embed_j.ml  embed_j.mli  emoji.ml  emoji.mli  emoji_j.mli  emoji_t.mli  event_models.ml  guild.atd  guild.ml  guild.mli  guild_j.mli  guild_t.ml  member.atd  member.ml  member.mli  member_j.ml  member_j.mli  member_t.ml  member_t.mli  message.atd  message.ml  message.mli  message_j.ml  (+28 more)
lib/models/channel/: channel.ml  channel.mli  channel_t.ml  channel_t.mli
lib/models/channel/message/: attachment.ml  attachment.mli  embed.ml  embed.mli  message.ml  message.mli  message_t.ml  message_t.mli  reaction.mli  reaction_t.ml  reaction_t.mli
lib/models/guild/: ban.ml  ban_t.ml  ban_t.mli  guild.ml  guild.mli  guild_t.ml  guild_t.mli  member.ml  member.mli  member_t.ml  member_t.mli  role.ml  role.mli  role_t.ml  role_t.mli
lib/models/id/: channel_id.ml  channel_id.mli  channel_id_t.ml  channel_id_t.mli  guild_id.ml  guild_id.mli  guild_id_t.ml  guild_id_t.mli  message_id.ml  message_id.mli  role_id.ml  role_id.mli  user_id.ml  user_id.mli  user_id_t.ml  user_id_t.mli
lib/models/user/: activity.ml  activity.mli  presence.ml  presence.mli  user.ml  user.mli  user_t.ml  user_t.mli
(+188 files in other folders)
