opam-version: "2.0"
name: "disml"
version: "0.2.1"
maintainer: "Adelyn Breedlove <tenseiken595@gmail.com>"
authors: "Adelyn Breedlove <tenseiken595@gmail.com>"
license: "MIT"
homepage: "https://github.com/Mishio595/disml"
doc: "https://mishio595.github.io/disml/index.html"
dev-repo: "git+https://github.com/Mishio595/disml"
bug-reports: "https://github.com/Mishio595/disml/issues"
tags: ["discord"]
synopsis: "An OCaml library for interfacing with the Discord API"
description: """
Dis.ml is a library that provides a high-level interface to the Discord API.
Key features include:
* Automatic sharding
* Deserialization of Discord objects to record types with related helper methods
* Automatic rate-limiting

For examples, see `/bin` in the git repo.
"""
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build & >= "1.3.0"}
  "async_ssl" {>= "v0.11.0"}
  "core" {>= "v0.11.3"}
  "cohttp-async" {>= "1.2.0"}
  "ppx_jane" {>= "v0.11.0"}
  "ppx_deriving_yojson" {>= "3.1"}
  "websocket-async" {>= "2.12"}
  "zlib" {>= "0.5"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" "@doc" "-j" jobs] {with-doc}
]