(library
	(name disml)
	(modules
		activity_t activity_j
		attachment_t attachment_j
		ban_t ban_j
		channel_t channel_j
		embed_t embed_j
		emoji_t emoji_j
		guild_t guild_j
		member_t member_j
		message_t message_j
		presence_t presence_j
		reaction_t reaction_j
		role_t role_j
		snowflake_t snowflake_j
		user_t user_j
		client
		dispatch
		endpoints
		event
		http
		opcode
		rl
		s
		sharder
	)
	(libraries core async_ssl cohttp-async yojson websocket-async zlib atdgen)
	(preprocess (pps ppx_jane))
)

; Test executable
(executable
	(name bot)
	(modules bot handler)
	(libraries core async_ssl disml)
)

(include_subdirs unqualified)
