(library
	(name disml)
	(public_name disml)
	(synopsis "An OCaml library for interfacing with the Discord API")
	(modules
		activity activity_t activity_j
		attachment attachment_t attachment_j
		ban ban_t ban_j
		channel channel_t channel_j
		embed embed_t embed_j
		emoji emoji_t emoji_j
		guild guild_t guild_j
		member member_t member_j
		message message_t message_j
		presence presence_t presence_j
		reaction reaction_t reaction_j
		role role_t role_j
		snowflake snowflake_t snowflake_j
		user user_t user_j
		client
		dispatch
		endpoints
		event
		http
		models
		opcode
		rl
		s
		sharder
	)
	(libraries core async_ssl cohttp-async yojson websocket-async zlib atdgen)
	;(preprocess (pps ppx_jane))
)

; Test executable
(executable
	(name bot)
	(modules bot handler)
	(libraries core async_ssl disml)
)

(include_subdirs unqualified)
