(library
	(name disml)
	(public_name disml)
	(synopsis "An OCaml library for interfacing with the Discord API")
	(modules
		activity
		attachment
		ban ban_t
		channel channel_t channel_id channel_id_t
		embed
		emoji
		guild guild_t guild_id guild_id_t
		member member_t
		message message_t message_id
		presence
		reaction reaction_t
		role role_t role_id
		snowflake
		user user_t user_id user_id_t
		event_models
		client client_options disml dispatch endpoints event http impl opcode rl s sharder
	)
	(libraries core async_ssl cohttp-async logs yojson websocket-async zlib ppx_deriving_yojson.runtime)
	(preprocess (pps ppx_jane ppx_deriving_yojson))
)

(include_subdirs unqualified)
