(library
	(name disml)
	(public_name disml)
	(synopsis "An OCaml library for interfacing with the Discord API")
	(modules
		activity
		attachment
		ban ban_t
		channel channel_t channel_id channel_id_t
		embed
		emoji
		guild guild_t guild_id guild_id_t
		member member_t
		message message_t message_id
		overwrites
		permissions
		presence
		reaction reaction_t
		role role_t role_id
		snowflake
		user user_t user_id user_id_t
		event_models
		cache client client_options disml dispatch endpoints event http opcode rl sharder
	)
	(libraries str checkseum.ocaml base lwt_ssl cohttp-lwt decompress yojson websocket-lwt ppx_deriving_yojson.runtime bitmasks calendar)
	(preprocess (pps ppx_sexp_conv ppx_deriving_yojson)))

(include_subdirs unqualified)
